--- a/doc/USER_MANUAL/citation.bib
+++ b/doc/USER_MANUAL/citation.bib
@@ -45,14 +45,36 @@
 }
 
 %==== media
+@article{dziewonski1981preliminary,
+  title={Preliminary reference Earth model},
+  author={Dziewonski, Adam M and Anderson, Don L},
+  journal={Physics of the earth and planetary interiors},
+  volume={25},
+  number={4},
+  pages={297--356},
+  year={1981},
+  publisher={Elsevier}
+}
+
+@article{thomsen1986weak,
+  title={Weak elastic anisotropy},
+  author={Thomsen, Leon},
+  journal={Geophysics},
+  volume={51},
+  number={10},
+  pages={1954--1966},
+  year={1986},
+  publisher={Society of Exploration Geophysicists}
+}
+
 @article{moczo_3d_2002,
-	title = {{3D} heterogeneous staggered-grid finite-difference modeling of seismic motion with volume harmonic and arithmetic averaging of elastic moduli and densities},
-	volume = {92},
-	number = {8},
-	journal = {Bulletin of the Seismological Society of America},
-	author = {Moczo, Peter and Kristek, Jozef and Vavrycuk, Václav and Archuleta, Ralph J. and Halada, Ladislav},
-	year = {2002},
-	pages = {3042--3066}
+  title = {{3D} heterogeneous staggered-grid finite-difference modeling of seismic motion with volume harmonic and arithmetic averaging of elastic moduli and densities},
+  volume = {92},
+  number = {8},
+  journal = {Bulletin of the Seismological Society of America},
+  author = {Moczo, Peter and Kristek, Jozef and Vavrycuk, Václav and Archuleta, Ralph J. and Halada, Ladislav},
+  year = {2002},
+  pages = {3042--3066}
 }
 @book{moczo_finite-difference_2014,
   address = {New York},
@@ -66,17 +88,17 @@
   keywords = {Finite differences, Mathematical models, Seismology}
 }
 @article{kristek_orthorhombic_2017,
-	title = {An orthorhombic representation of a heterogeneous medium for the finite-difference modelling of seismic wave propagation},
-	volume = {208},
-	issn = {0956-540X, 1365-246X},
-	doi = {10.1093/gji/ggw456},
-	language = {en},
-	number = {2},
-	journal = {Geophysical Journal International},
-	author = {Kristek, Jozef and Moczo, Peter and Chaljub, Emmanuel and Kristekova, Miriam},
-	month = feb,
-	year = {2017},
-	pages = {1250--1264}
+  title = {An orthorhombic representation of a heterogeneous medium for the finite-difference modelling of seismic wave propagation},
+  volume = {208},
+  issn = {0956-540X, 1365-246X},
+  doi = {10.1093/gji/ggw456},
+  language = {en},
+  number = {2},
+  journal = {Geophysical Journal International},
+  author = {Kristek, Jozef and Moczo, Peter and Chaljub, Emmanuel and Kristekova, Miriam},
+  month = feb,
+  year = {2017},
+  pages = {1250--1264}
 }
 @article{chaljub2015,
   title={3-{D} numerical simulations of earthquake ground motion in sedimentary basins: testing accuracy through stringent models},
@@ -89,3 +111,13 @@
   publisher={Oxford University Press}
 }
 
+@article{jiang2021tti,
+  title={TTI equivalent medium parametrization method for the seismic waveform modelling of heterogeneous media with coarse grids},
+  author={Jiang, Luqian and Zhang, Wei},
+  journal={Geophysical Journal International},
+  volume={227},
+  number={3},
+  pages={2016--2043},
+  year={2021},
+  publisher={Oxford University Press}
+}
