--- a/doc/USER_MANUAL/manual_CGFD3D.tex
+++ b/doc/USER_MANUAL/manual_CGFD3D.tex
@@ -25,6 +25,12 @@
 \usepackage{amsfonts,amsmath,amssymb,mathptmx}
 \usepackage{mathrsfs}
 \usepackage[colorlinks, citecolor=blue, linkcolor=black, anchorcolor=black]{hyperref}
+\usepackage[dvipsnames,usenames]{xcolor}
+% colors to show the corrections
+\definecolor{light-gray}{rgb}{0.7,0.7,0.7}
+\definecolor{dark-gray}{rgb}{0.1,0.1,0.3}
+\definecolor{light-blue}{rgb}{0.7,0.7,0.9}
+\definecolor{dark-blue}{rgb}{0.2,0.2,0.5}
 
 %code
 \usepackage{listings}
@@ -42,6 +48,44 @@
     breaklines=true
 }
 
+\definecolor{light-gray}{rgb}{0.7,0.7,0.7}
+\definecolor{dark-gray}{rgb}{0.1,0.1,0.3}
+\definecolor{light-blue}{rgb}{0.7,0.7,0.9}
+\definecolor{dark-blue}{rgb}{0.2,0.2,0.5}
+
+\colorlet{punct}{red!60!black}
+\definecolor{background}{HTML}{EEEEEE}
+\definecolor{delim}{RGB}{20,105,176}
+\colorlet{numb}{magenta!60!black}
+
+\lstdefinelanguage{json}{
+    basicstyle=\normalfont\ttfamily,
+    %numbers=left,
+    %numberstyle=\scriptsize,
+    %stepnumber=1,
+    %numbersep=8pt,
+    showstringspaces=false,
+    breaklines=true,
+    frame=lines,
+    backgroundcolor=\color{background},
+    literate=
+     *{0}{{{\color{numb}0}}}{1}
+      {1}{{{\color{numb}1}}}{1}
+      {2}{{{\color{numb}2}}}{1}
+      {3}{{{\color{numb}3}}}{1}
+      {4}{{{\color{numb}4}}}{1}
+      {5}{{{\color{numb}5}}}{1}
+      {6}{{{\color{numb}6}}}{1}
+      {7}{{{\color{numb}7}}}{1}
+      {8}{{{\color{numb}8}}}{1}
+      {9}{{{\color{numb}9}}}{1}
+      {:}{{{\color{punct}{:}}}}{1}
+      {,}{{{\color{punct}{,}}}}{1}
+      {\{}{{{\color{delim}{\{}}}}{1}
+      {\}}{{{\color{delim}{\}}}}}{1}
+      {[}{{{\color{delim}{[}}}}{1}
+      {]}{{{\color{delim}{]}}}}{1},
+}
 
 \IfFileExists{url.sty}{\usepackage{url}}
                       {\newcommand{\url}{\texttt}}
@@ -57,18 +101,18 @@
 % figures
 \usepackage{graphicx}
 
+\usepackage{enumitem}
+\setitemize[1]{itemsep=0.0em, partopsep=0.2pt, parsep=\parskip, topsep=0pt}
 % we are running pdflatex, so convert .eps files to .pdf
 %\usepackage[dvips]{epsfig}
 
-% colors to show the corrections
-\usepackage[dvipsnames,usenames]{xcolor}
-\definecolor{light-gray}{rgb}{0.7,0.7,0.7}
-\definecolor{dark-gray}{rgb}{0.1,0.1,0.3}
-\definecolor{light-blue}{rgb}{0.7,0.7,0.9}
-\definecolor{dark-blue}{rgb}{0.2,0.2,0.5}
+
+\usepackage{fancyhdr}
 
 
+\graphicspath{{./figure}}
 
+\setlength{\parskip}{0.4em}
 % create thumbnails
 %\usepackage[pdftex]{thumbpdf}
 
@@ -95,7 +139,7 @@
 
 \title{\textbf{CGFD3D-elastic}\\
        \textbf{User Manual}}
-
+ 
 
 \author{\copyright \, zwlab}
 
@@ -120,10 +164,9 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %\include{01_introduction}
+\include{grid}
 
 \include{07_media}
-
-\include{grid}
 
 \include{source}
 
